# loop-guard

./: .gitignore  README.md  pyproject.toml  real_experiment_results.tsv  spec.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_citation.py  bench_end_to_end.py  bench_false_positive.py  bench_statistical.py
blog/: loop-guard-announcement.md
examples/: adk_demo.py  autoresearch_demo.py  autoresearch_karpathy_analysis.py  autoresearch_real_demo.py  openai_sdk_demo.py
experiments/: anthropic_real_demo.py  gemini_real_demo.py  openai_real_demo.py  real_training_loop.py
loop_guard/: __init__.py  cli.py  engine.py  extractor.py  guard.py  models.py  provenance.py  reporter.py
loop_guard/integrations/: __init__.py  anthropic_sdk.py  autoresearch.py  google_adk.py  openai_agents.py
loop_guard/verifiers/: __init__.py  citation.py  code_output.py  loop_trap.py  metric.py  regression.py  statistical.py  tool_output.py
tests/: test_autoresearch.py  test_citation.py  test_extractor.py  test_integration.py  test_loop_trap.py  test_provenance.py  test_regression.py  test_statistical.py  test_tool_output.py
