[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loop-guard"
version = "0.1.0"
description = "Deterministic verification for autonomous agent loops"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "LoopGuard Contributors" },
]
keywords = ["agents", "verification", "deterministic", "autonomous", "llm", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
    "respx>=0.22.0",
]
all = ["loop-guard[llm,dev]"]

[project.scripts]
loop-guard = "loop_guard.cli:main"

[project.urls]
Homepage = "https://github.com/ybkim95/loop-guard"
Repository = "https://github.com/ybkim95/loop-guard"
Issues = "https://github.com/ybkim95/loop-guard/issues"

[tool.hatch.build.targets.wheel]
packages = ["loop_guard"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "SIM102", "SIM103", "SIM105"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
